[TEST] Step 5 : Additionner red state